Add typographic families

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import './stylePartials/meyerReset.scss';
+@import './stylePartials/variables.scss';
 @import './stylePartials/typography.scss';
 @import './stylePartials/header.scss';
 @import './stylePartials/main.scss';
