--- a/src/stylePartials/_main.scss
+++ b/src/stylePartials/_main.scss
@@ -1,9 +1,11 @@
 main {
   padding: 20px;
-  background: #999;
+  background: $black;
+  box-shadow: rgba(0, 0, 0, 0.25) 4px 4px 13px 0px;
+  margin-top: 20px;
   .generatedNames {
     margin: 0 auto;
-    border: solid 1px black;
+    border: solid 1px $primary;
     padding: 20px;
     ul {
       text-align: center;
