--- a/src/stylePartials/_variables.scss
+++ b/src/stylePartials/_variables.scss
@@ -1,5 +1,9 @@
 // COLOURS
+$bg: #2b2b2b;
+$black: #202020;
+$primary: #fff;
+$secondary: rgb(181, 181, 181);
 
 // TYPOGRAPHY
-$oswald: 'Oswald', impact, charcoal, sans-serif;
-$openSans: 'Open Sans', Tahoma, Geneva, sans-serif;
+$headers-txt: Georgia, 'Times New Roman', Times, serif;
+$body-txt: 'Roboto', sans-serif;
