Style form and finalize app design

--- a/src/stylePartials/_header.scss
+++ b/src/stylePartials/_header.scss
@@ -1,5 +1,7 @@
 header {
-  padding: 20px;
-  // border-bottom: solid 2px $white;
+  // padding: 26px 0 23px 0;
+  height: 60px;
+  line-height: 60px;
   background: $black;
+  display: block;
 }
