Having a normal one.

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,3 +13,13 @@ body {
   max-width: 650px;
   margin: 0 auto;
 }
+
+// Me: "Hoo! Work is so harsh!"
+// Employed: stressed, depressed.
+// Jobless: stressed, depressed.
+//
+// Me: "I hate seasonal affective disorder, yuck!"
+// Winter: sad.
+// Summer: sad.
+//
+// Nope. There's definitely not a deeper problem cooking here, no sir-ee. Enjoying a normal time. Thriving. 🤠
