--- a/src/stylePartials/_main.scss
+++ b/src/stylePartials/_main.scss
@@ -2,10 +2,12 @@ main {
   padding: 20px;
   background: $bg;
   box-shadow: rgba(0, 0, 0, 0.25) 4px 4px 13px 0px;
+  display: block;
   .generatedNames {
     margin: 0 auto;
     border: solid 1px $secondary;
     padding: 20px;
+    min-height: 280px;
     ul {
       text-align: center;
       margin-top: 1rem;
@@ -14,64 +16,83 @@ main {
       }
     }
   }
-  form {
-    padding: 2rem;
-    fieldset {
-      margin-bottom: 1rem;
+}
+form {
+  padding: 2rem;
+  fieldset {
+    margin-bottom: 1rem;
+  }
+  legend {
+    margin-bottom: 1rem;
+  }
+  input[type='radio'] {
+    &:checked,
+    &:not(:checked) {
+      position: absolute;
+      left: -9999px;
     }
-    legend {
-      margin-bottom: 1rem;
-    }
-    input[type='radio'] {
-      &:checked,
-      &:not(:checked) {
-        position: absolute;
-        left: -9999px;
-      }
-      &:checked + label,
-      &:not(:checked) + label {
-        position: relative;
-        padding-left: 2.4rem;
-        cursor: pointer;
-        display: inline-block;
-        &::before {
-          content: '';
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 1.5rem;
-          height: 1.5rem;
-          border: 1px solid $secondary;
-          border-radius: 100%;
-        }
-        &::after {
-          content: '';
-          position: absolute;
-          left: 0.3rem;
-          top: 0.3rem;
-          width: 1.1rem;
-          height: 1.1rem;
-          background: $black;
-          border-radius: 100%;
-          -webkit-transition: all 0.2s ease;
-          transition: all 0.2s ease;
-        }
-      }
-      &:not(:checked) + label:after {
-        opacity: 0;
-        -webkit-transform: scale(0);
-        transform: scale(0);
-      }
-      &:checked + label:after {
-        opacity: 1;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-      }
-      // issue with checked vs unchecked detection
-    }
-    button {
-      margin-top: 1rem;
+    &:checked + label,
+    &:not(:checked) + label {
+      position: relative;
+      padding-left: 2.4rem;
       cursor: pointer;
+      display: inline-block;
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 1.5rem;
+        height: 1.5rem;
+        border: 1px solid $secondary;
+        border-radius: 100%;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0.3rem;
+        top: 0.3rem;
+        width: 1.1rem;
+        height: 1.1rem;
+        background: $black;
+        border-radius: 100%;
+        -webkit-transition: all 0.2s ease;
+        transition: all 0.2s ease;
+      }
+    }
+    &:not(:checked) + label::after {
+      opacity: 0;
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    &:checked + label:after {
+      opacity: 1;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+    &:focus + label {
+      text-shadow: 1px 0 0 $black;
+      &:before {
+        border-color: $black;
+      }
+    }
+  }
+  label {
+    margin-right: 10px;
+  }
+  button {
+    margin-top: 2rem;
+    cursor: pointer;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    @include hexagon;
+    &:hover,
+    &:focus {
+      background: $focus;
+      color: $black;
+      -webkit-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+      outline: none;
     }
   }
 }
