--- a/src/stylePartials/_variables.scss
+++ b/src/stylePartials/_variables.scss
@@ -3,6 +3,7 @@ $bg: #dfdfdf;
 $black: #2b2b2b;
 $white: #fff;
 $secondary: #b5b5b5;
+$focus: #cabea0;
 
 // TYPOGRAPHY
 $headersText: Georgia, 'Times New Roman', Times, serif;
@@ -19,4 +20,32 @@ $bodyText: 'Roboto', sans-serif;
     width: 3.6rem;
     border-bottom: solid 1px $secondary;
   }
+}
+
+@mixin hexagon {
+  -webkit-clip-path: polygon(
+    calc(100% - 20px) 0,
+    100% 50%,
+    calc(100% - 20px) 100%,
+    20px 100%,
+    0 50%,
+    20px 0
+  );
+  clip-path: polygon(
+    calc(100% - 20px) 0,
+    100% 50%,
+    calc(100% - 20px) 100%,
+    20px 100%,
+    0 50%,
+    20px 0
+  );
+  display: block;
+  font-size: 1.4rem;
+  min-height: 3.5rem;
+  padding: 0rem 2.5rem;
+  text-transform: uppercase;
+  background: $black;
+  color: $white;
+  border: none;
+  font-family: $headersText;
 }
