--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,34 @@ body {
   margin: 0 auto;
 }
 
+.hexagon {
+  -webkit-clip-path: polygon(
+    calc(100% - 20px) 0,
+    100% 50%,
+    calc(100% - 20px) 100%,
+    20px 100%,
+    0 50%,
+    20px 0
+  );
+  clip-path: polygon(
+    calc(100% - 20px) 0,
+    100% 50%,
+    calc(100% - 20px) 100%,
+    20px 100%,
+    0 50%,
+    20px 0
+  );
+  display: block;
+  font-size: 1.4rem;
+  min-height: 3.5rem;
+  padding: 0rem 2.5rem;
+  text-transform: uppercase;
+  background: $black;
+  color: $white;
+  border: none;
+  font-family: $headersText;
+}
+
 // Me: "Hoo! Work is so harsh!"
 // Employed: stressed, depressed.
 // Jobless: stressed, depressed.
