--- a/src/stylePartials/_main.scss
+++ b/src/stylePartials/_main.scss
@@ -85,6 +85,8 @@ form {
     cursor: pointer;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
+    background: $black;
+    display: block;
     &:hover,
     &:focus {
       background: $focus;
