--- a/src/style.scss
+++ b/src/style.scss
@@ -31,15 +31,15 @@ body {
     0 50%,
     20px 0
   );
-  display: block;
   font-size: 1.4rem;
-  min-height: 3.5rem;
+  max-height: 3.5rem;
+  line-height: 3.5rem;
   padding: 0rem 2.5rem;
   text-transform: uppercase;
-  background: $black;
   color: $white;
   border: none;
   font-family: $headersText;
+  text-decoration: none;
 }
 
 // Me: "Hoo! Work is so harsh!"
