--- a/src/style.scss
+++ b/src/style.scss
@@ -10,9 +10,9 @@ body {
 }
 
 .wrapper {
-  max-width: 650px;
+  max-width: 65rem;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 2rem;
 }
 
 .hexagon {
