--- a/src/stylePartials/_header.scss
+++ b/src/stylePartials/_header.scss
@@ -1,13 +1,13 @@
 header {
-  height: 60px;
-  line-height: 60px;
+  height: 6rem;
+  line-height: 6rem;
   background: $black;
   div.wrapper {
     display: flex;
     justify-content: space-between;
     h1 {
       display: inline-block;
-      margin-right: 20px;
+      margin-right: 2rem;
     }
     a {
       background: $bg;
