--- a/src/stylePartials/_main.scss
+++ b/src/stylePartials/_main.scss
@@ -1,18 +1,18 @@
 main {
-  padding: 20px;
+  padding: 2rem;
   background: $bg;
   box-shadow: rgba(0, 0, 0, 0.25) 4px 4px 13px 0px;
   display: block;
   .generatedNames {
     margin: 0 auto;
     border: solid 1px $secondary;
-    padding: 20px;
-    min-height: 280px;
+    padding: 2rem;
+    min-height: 28rem;
     ul {
       text-align: center;
       margin-top: 1rem;
       li:not(:last-of-type) {
-        margin-bottom: 10px;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -78,7 +78,7 @@ form {
     }
   }
   label {
-    margin-right: 10px;
+    margin-right: 1rem;
     margin-bottom: 2rem;
   }
   button {
