--- a/src/style.scss
+++ b/src/style.scss
@@ -7,12 +7,16 @@
 
 body {
   background: $secondary;
+  @media only screen and (max-width: 600px) {
+    background: $bg;
+  }
 }
 
 .wrapper {
-  max-width: 65rem;
+  max-width: calc(65rem - 4rem);
   margin: 0 auto;
-  padding: 0 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .hexagon {
