--- a/src/stylePartials/_main.scss
+++ b/src/stylePartials/_main.scss
@@ -11,9 +11,9 @@ main {
     border: solid 1px $secondary;
     padding: 2rem;
     min-height: 28rem;
-    ul {
+    ul#names {
       text-align: center;
-      margin-top: 1rem;
+      margin-top: 2rem;
       li:not(:last-of-type) {
         margin-bottom: 1rem;
       }
