--- a/src/stylePartials/_footer.scss
+++ b/src/stylePartials/_footer.scss
@@ -1,12 +1,16 @@
 footer {
   width: 100%;
-  // max-width: 650px;
-  background: #666;
-  padding: 10px 0px;
+  background: $black;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  p {
-    margin: 0;
+  margin-top: 2rem;
+  @media only screen and (min-height: 695px) {
+    position: absolute;
+    bottom: 0;
+  }
+  a {
+    line-height: 3rem;
+    color: $secondary;
+    text-decoration: none;
+    font-size: 1.2rem;
   }
 }
