--- a/src/style.scss
+++ b/src/style.scss
@@ -1,66 +1,19 @@
-@import './stylePartials/meyerReset.scss';
-@import './stylePartials/variables.scss';
-@import './stylePartials/typography.scss';
-@import './stylePartials/header.scss';
-@import './stylePartials/main.scss';
-@import './stylePartials/footer.scss';
+@import './styles/meyerReset.scss';
 
 body {
-  background: $secondary;
-  @media only screen and (max-width: 600px) {
-    background: $bg;
+  background: pink;
+
+  section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    text-align: center;
+
+    h1, div {
+      margin: 20px 0;
+      width: 100%;
+    }
   }
 }
-
-.wrapper {
-  max-width: calc(65rem - 4rem);
-  margin: 0 auto;
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.hexagon {
-  -webkit-clip-path: polygon(
-    calc(100% - 20px) 0,
-    100% 50%,
-    calc(100% - 20px) 100%,
-    20px 100%,
-    0 50%,
-    20px 0
-  );
-  clip-path: polygon(
-    calc(100% - 20px) 0,
-    100% 50%,
-    calc(100% - 20px) 100%,
-    20px 100%,
-    0 50%,
-    20px 0
-  );
-  font-size: 1.4rem;
-  max-height: 3.5rem;
-  line-height: 3.5rem;
-  padding: 0rem 2.5rem;
-  text-transform: uppercase;
-  color: $white;
-  border: none;
-  font-family: $headersText;
-  text-decoration: none;
-  &:hover,
-  &:focus {
-    background: $focus;
-    color: $black;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    outline: none;
-  }
-}
-
-// Me: "Hoo! Work is so harsh!"
-// Employed: stressed, depressed.
-// Jobless: stressed, depressed.
-//
-// Me: "I hate seasonal affective disorder, yuck!"
-// Winter: sad.
-// Summer: sad.
-//
-// Nope. There's definitely not a deeper problem cooking here, no sir-ee. Enjoying a normal time. Thriving. 🤠
