--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 // COLOURS
 $bg: #dfdfdf;
-$black: #2b2b2b;
+$black: #202020;
 $white: #fff;
 $secondary: #b5b5b5;
-$focus: #cabea0;
+$focus: #86aab8;
 
 // TYPOGRAPHY
 $headersText: Georgia, 'Times New Roman', Times, serif;
