--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,17 +1,18 @@
 main {
   padding: 2rem;
   background: $bg;
-  box-shadow: rgba(0, 0, 0, 0.25) 4px 4px 13px 0px;
+  box-shadow: rgba(0, 0, 0, 1) 4px 15px 25px 0px;
   display: block;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 650px) {
     box-shadow:none;
   }
-  
-  p span{
-    @media only screen and (max-width: 550px) {
-      display :none;
+
+  > p {
+    @media only screen and (max-width: 650px) {
+      display: none;
     }
   }
+  
   .generatedNames {
     margin: 0 auto;
     border: solid 1px $secondary;
@@ -27,8 +28,11 @@ main {
   }
 }
 form {
-  padding: 2rem;
+  padding: 2rem 0;
+  margin-top: 2rem;
   fieldset {
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 1rem;
   }
   legend {
@@ -87,8 +91,8 @@ form {
     }
   }
   label {
-    margin-right: 1rem;
-    margin-bottom: 2rem;
+    margin-right: 1.5rem;
+    margin-bottom: 2.5rem;
   }
   button {
     cursor: pointer;
