--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,7 @@
 
 
 #app {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-image: url(../src/assets/images/bg.jpg) !important;
   background-repeat: no-repeat;
